--- a/index.html
+++ b/index.html
@@ -186,10 +186,19 @@
             { text: "Organize Your Room", url: "#" },
             { text: "Learn A New Skill", url: "#" },
             { text: "Exercise", url: "#" },
-            { text: "Talk To Friends", url: "#" },
+            { text: "Talk To Friends", url: "https://discord.com/" },
             { text: "Watch YouTube/TV", url: "https://www.youtube.com/@FreddieThePebble" },
             { text: "Play Games", url: "https://bit.ly/PebbleGames" },
             { text: "Organize Computer Files", url: "#" }
+            { text: "Make Art", url: "#" },
+            { text: "Read A Book", url: "https://alwaysjudgeabookbyitscover.com/" },
+            { text: "Learn A Language", url: "https://translate.google.com/" },
+            { text: "Useless Web", url: "https://theuselessweb.com/" },
+            { text: "Listen To Music", url: "https://www.youtube.com/watch?v=dQw4w9WgXcQ" },
+            { text: "Cook", url: "https://store.steampowered.com/app/641320/Cooking_Simulator/" },
+            { text: "Meditate", url: "https://bit.ly/PebbleGames" },
+            { text: "Decorate", url: "#" }
+            { text: "Solve A Puzzle", url: "#" }
         ];
 
         function shuffleArray(array) {
