--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             { text: "Talk To Friends", url: "https://discord.com/" },
             { text: "Watch YouTube/TV", url: "https://www.youtube.com/@FreddieThePebble" },
             { text: "Play Games", url: "https://bit.ly/PebbleGames" },
-            { text: "Organize Computer Files", url: "#" }
+            { text: "Organize Computer Files", url: "#" },
             { text: "Make Art", url: "#" },
             { text: "Read A Book", url: "https://alwaysjudgeabookbyitscover.com/" },
             { text: "Learn A Language", url: "https://translate.google.com/" },
@@ -197,7 +197,7 @@
             { text: "Listen To Music", url: "https://www.youtube.com/watch?v=dQw4w9WgXcQ" },
             { text: "Cook", url: "https://store.steampowered.com/app/641320/Cooking_Simulator/" },
             { text: "Meditate", url: "https://bit.ly/PebbleGames" },
-            { text: "Decorate", url: "#" }
+            { text: "Decorate", url: "#" },
             { text: "Solve A Puzzle", url: "#" }
         ];
 
